docs: add documentation for find opening
