# handler/findOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/nicholasboari/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Find opening
+// @Description Find a opening by id
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} FindOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [get]
 func FindOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 
